vzmigrate(8), vzmigrate --help: document --ssh-mux
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -87,6 +87,8 @@ Options:
 	Additional options that will be passed to ssh while establishing
 	connection to destination host. Please be careful with options
 	passed, DO NOT pass destination hostname.
+--ssh-mux
+	Use ssh connection multiplexion (speeds up live migration).
 --rsync=<rsync options>
 	Additional options that will be passed to rsync.
 --keep-dst
