vzmigrate: bind to localhost only
When setting up openssh port forwarding to be used by ploop copy
with feedback, make ssh listen only on localhost rather than any IP.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -389,7 +389,8 @@ ploop_copy() {
 
 	# Set up two-way channel for ploop copy with feedback
 	port=2335
-	$SSH_NOMUX -L $port:$host:$port root@$host "socat TCP-LISTEN:$port " \
+	$SSH_NOMUX -L localhost:$port:$host:$port root@$host \
+		"socat TCP-LISTEN:$port " \
 		"EXEC:ploop\ $VVVV\ copy\ -d\ $delta_dst\ -i0\ -f1" &
 	pid=$!
 	sleep 1
