vzmigrate: fix port forwarding
As vznnc listens at localhost, ssh -L remote_host argument should also
be localhost.

While at it, s/localhost/127.0.0.1/ so that ssh no longer relies on
proper 'localhost' record in /etc/hosts.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -389,7 +389,7 @@ ploop_copy() {
 
 	# Set up two-way channel for ploop copy with feedback
 	port=2335
-	$SSH_NOMUX -L localhost:$port:$host:$port root@$host \
+	$SSH_NOMUX -L 127.0.0.1:$port:127.0.0.1:$port root@$host \
 		"vznnc l $port ploop $VVVV copy -d $delta_dst -i0 -f1" &
 	pid=$!
 	sleep 1
