--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -390,7 +390,8 @@ ploop_copy() {
 	# Set up two-way channel for ploop copy with feedback
 	port=2335
 	$SSH_NOMUX -L 127.0.0.1:$port:127.0.0.1:$port root@$host \
-		"vznnc -l -p $port ploop $VVVV copy -d $delta_dst -i0 -f1" &
+		"vznnc -l -p $port ploop $VVVV copy -d $delta_dst -i0 -f1" \
+		>/dev/null </dev/zero &
 	pid=$!
 	sleep 1
 
