vzmigrate: suppress error from kill -0
kill -0 $pid is used to check if the $pid is still there,
and if not we error out with an appropriate message.
It doesn't make sense to show an error from kill:

	kill: (1235) - No such process

so let's suppress it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -397,7 +397,7 @@ ploop_copy() {
 	sleep 1
 
 	# check if ssh is still there
-	if ! kill -0 $pid; then
+	if ! kill -0 $pid 2>/dev/null; then
 		log 0 "Failed to setup remote ploop copy"
 		ploop_copy_old
 		return
