vzmigrate: detect "can't lock CT" error
In some cases we can't lock container not because it's already locked,
but for some other reason (running as non-root, no lock directory).

In such cases, there is no lock file, so we can check for this condition
print an appropriate error message and exit.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -198,6 +198,9 @@ lock_ct() {
 	if echo $$ > $f; then
 		log 1 "Locked CT $1"
 		ret=0
+	elif ! test -f $f; then
+		log 0 "Can't lock CT"
+		exit 1
 	else
 		pid=$(cat $f)
 		log 0 "CT $1 already locked by PID $pid" 1>&2
