vzmigrate: don't run ps if there's no $pid
Check that $pid is not empty before running ps.

Otherwise we have this:

	Error: ERROR: CT  already locked by PID
	error: list of process IDs must follow -p

	Usage:
	 ps [options]

	 Try 'ps --help <simple|list|output|threads|misc|all>'
	  or 'ps --help <s|l|o|t|m|a>'
	 for additional help text.

	For more details see ps(1).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -204,7 +204,7 @@ lock_ct() {
 	else
 		pid=$(cat $f)
 		log 0 "CT $1 already locked by PID $pid" 1>&2
-		logexec 1 ps -f -p $pid
+		test -n "$pid" && logexec 1 ps -f -p $pid
 		ret=1
 	fi
 
