vzmigrate: don't use rsync --delete-excluded
Options "--exclude $TOP_DELTA --delete-excluded" were used for rsync
in case of migration with ploop-copy in order to delete the top delta
so that ploop copy receive don't stumble (it does not overwrite
existing files).

Unfortunately, this makes it unable to pass some other arbitrary
--exclude options to rsync in case there is a need to say "skip those
files, they are already there" to rsync.

So, remove --delete-excluded, and make sure to run rm -f $TOP_DELTA
on destination just before starting ploop copy.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -381,6 +381,9 @@ ploop_copy() {
 		test -n "$size" && cat="pv -s $size"
 	fi
 
+	# Remove top delta on dst
+	$SSH "root@$host" rm -f $delta_dst
+
 	# Check if remote side supports ploop copy with feedback
 	err=$($SSH "root@$host" ploop copy -i0 -f1 -d /dev/null \
 			</dev/null >/dev/null 2>&1; echo $?)
@@ -913,7 +916,7 @@ if [ "$PLOOP" = "yes" -a "$state" = "running" ]; then
 		undo_root
 		exit $MIG_ERR_COPY
 	fi
-	RSYNC1_OPTIONS="--exclude $TOP_DELTA --delete-excluded"
+	RSYNC1_OPTIONS="--exclude $TOP_DELTA"
 fi
 
 log 1 "Syncing private"
