--- a/man/vzctl.8.in
+++ b/man/vzctl.8.in
@@ -41,7 +41,7 @@ vzctl \- perform various operations on an OpenVZ container
 .OP --skip-config
 .SY vzctl
 [\fIflags\fR] \fBsnapshot-switch\fR \fICTID\fR
-.OP --skip-resume
+.OP "--skip-resume\fR | \fB--must-resume"
 .OP --skip-config
 \fB--id\fR \fIuuid\fR
 .SY vzctl
@@ -959,13 +959,24 @@ Options \fB--name\fR and \fB--description\fR can be used to specify the
 snapshot name and description, respectively. Name is displayed by
 \fBsnapshot-list\fR.
 .TP 4
-\fBsnapshot-switch\fR \fICTID\fR [\fB--skip-resume\fR] [\fB--skip-config\fR] \fB--id\fR \fIuuid\fR
-Switches the container to a snapshot identified by \fIuuid\fR.
-Note that the current container state and its file system state is lost!
-If snapshot contains CT memory dump, and option \fB--skip-resume\fR
-is not specified, container is restored, otherwise it is stopped.
-If snapshot contains CT configuration file, and option \fB--skip-config\fR
-is not specified, container configuration file is restored.
+\fBsnapshot-switch\fR \fICTID\fR [\fB--skip-resume\fR | \fB--must-resume\fR] [\fB--skip-config\fR] \fB--id\fR \fIuuid\fR
+Switches the container to a snapshot identified by \fIuuid\fR,
+restoring its file system state, configuration (if available)
+and its running state (if available).
+
+.B Note that the current state of a container (including
+.B its file system state and its configuration file) is lost!
+
+Option \fB--skip-resume\fR is used to ignore a CT memory dump file
+in a snapshot, as a result the container will end up being in a stopped state
+(same as if a snapshot has been taken with \fB--skip-suspend\fR).
+
+If option \fB--must-resume\fR is set, absense of a memory dump is
+treated as an error, and the inability to restore from the memory dump
+is treated as an error rather than warning.
+
+Option option \fB--skip-config\fR is used to ignore the CT configuration
+file in a snapshot, i.e. the current configuration file will be left as is.
 .TP 4
 \fBsnapshot-delete\fR \fICTID\fR \fB--id\fR \fIuuid\fR
 Removes a specified snapshot.
