vzlist: fix cpulimit rounding
As pointed out by Kevin,

> When setting a cpulimit with vzctl which cannot be divided by /25
> without getting a decimal, vzlist then shows an off value.
>
> For example:
> :~# setgetlim(){ vzctl --quiet set 810 --cpulimit $1; vzlist -Ho cpulimit 810; }
> :~# for lim in $(seq 0 800); do if [ $lim == $(setgetlim $lim) ]; then
> echo $lim; fi; done
> 0
> 25
> 50
> 75

Fix by using double for calculation and rounding the result.

https://bugzilla.openvz.org/3063

Reported-by: Kevin Holly <root@hallowe.lt>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -96,6 +96,11 @@ AC_CHECK_LIB(util, openpty,
 
 AC_SUBST(UTIL_LIBS)
 
+AC_CHECK_LIB(m, rint,
+	MATH_LIBS="-lm", AC_MSG_ERROR([libm not found]),)
+
+AC_SUBST(MATH_LIBS)
+
 # Checks for header files.
 AC_CHECK_HEADERS([arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h \
 	sys/file.h sys/ioctl.h sys/mount.h sys/param.h sys/socket.h \
