--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -69,7 +69,7 @@ endif
 vzctl_LDADD = $(VZCTL_LIBS) $(DL_LIBS) $(UTIL_LIBS)
 
 vzlist_SOURCES = vzlist.c
-vzlist_LDADD   = $(VZCTL_LIBS)
+vzlist_LDADD   = $(VZCTL_LIBS) $(MATH_LIBS)
 
 vzmemcheck_SOURCES = validate.c \
                      vzmemcheck.c
