--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -18,6 +18,10 @@
 #
 # vzmigrate is used for container migration to another node
 
+LC_ALL=C
+export LC_ALL
+LANGUAGE=C
+export LANGUAGE
 
 ACT_SCRIPTS_SFX="start stop mount umount premount postumount"
 SSH_OPTIONS="-o BatchMode=yes"
