init.d/vz*: load pio_kaio
Make sure to load pio_kaio ploop kernel module as it might be needed,
and there is no way to autoload it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -29,7 +29,7 @@ check_config() {
 		: ${MODULES:="vzmon vzdquota vzdev"}
 		: ${MIGRATE_MODULES:="vzcpt vzrst"}
 		: ${NET_MODULES:="vznetdev vznet vzethdev"}
-		: ${PLOOP_MODULES:="ploop pfmt_ploop1 pfmt_raw pio_direct pio_nfs"}
+		: ${PLOOP_MODULES:="ploop pfmt_ploop1 pfmt_raw pio_direct pio_nfs pio_kaio"}
 		: ${MISC_MODULES:="vziolimit"}
 
 		# check if you should load vzwdog module
