--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -76,7 +76,7 @@ if [ "${MODULES_DISABLED}" != "yes" ]; then
 		IPT_MODULES="${IPT_MODULES} ${IP6TABLES}"
 	fi
 	VZFS_MODULES="simfs"
-	PLOOP_MODULES="ploop pfmt_ploop1 pfmt_raw pio_direct pio_nfs"
+	PLOOP_MODULES="ploop pfmt_ploop1 pfmt_raw pio_direct pio_nfs pio_kaio"
 fi
 
 
